# assistai

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: config.py  db.py  main.py  redis_client.py  storage.py
backend/app/announcements/: __init__.py  notify.py  router.py  schemas.py
backend/app/attendance/: __init__.py  codes.py  router.py  schemas.py  service.py
backend/app/auth/: deps.py  email.py  rate_limit.py  router.py  schemas.py  sessions.py  tokens.py
backend/app/content/: __init__.py  deps.py  router.py  schemas.py
backend/app/courses/: deps.py  router.py  schemas.py
backend/app/dashboard/: __init__.py  router.py  schemas.py
backend/app/ingestion/: __init__.py  chunking.py  embeddings.py  extract.py  pipeline.py  queue.py  worker.py
backend/app/live/: __init__.py  manager.py  router.py  schemas.py  service.py  ws.py
backend/app/models/: __init__.py  announcements.py  auth.py  base.py  content.py  courses.py  enums.py  identity.py  sessions.py
backend/app/tutor/: __init__.py  generation.py  guardrails.py  orchestrator.py  retrieval.py  router.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 9464721af713_add_login_token.py  b7e2a1c9d4f0_content_ingestion.py  c3f4a5b6d7e8_tutor_message_flags.py  (+5 more)
backend/tests/: conftest.py  test_announcements.py  test_attendance.py  test_auth.py  test_content.py  test_courses.py  test_dashboard.py  test_health.py  test_live.py  test_tutor.py
(+59 files in other folders)
