[project]
name = "assistai-backend"
version = "0.1.0"
description = "AssistAI backend — FastAPI API gateway, Postgres/pgvector persistence, Redis realtime."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "pydantic-settings>=2.4",
    "pydantic[email]>=2.4",
    "redis>=5.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-pptx>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
